--- a/strong-bad.vm
+++ b/strong-bad.vm
@@ -1,9 +1,89 @@
 <!-- STRONG BAD NOTES -->
 
 
-<!-- General Knowledge -->
-/cvs/nexus/cms-web/htdocs/v9/variations/oem-alfa
-Currently our work lives in this folder.
+
+
+<!-- General Workflow -->
+cmsrun -l
+pullall
+buildalfa
+watchalfa
+
+Go To Rally -> Find Applicable task and assign to self and set "in progress"
+
+[If No Branch Yet]
+git checkout develop
+git pull
+startfeature US12345 (makes new branch)
+
+[If Branch Exists]
+git fetch
+git checkout feature/US12345
+
+
+
+<!-- Notes with Ed -->
+Rally ->
+My Settings -> Default WorkSpace DT Corp Strong Bad
+
+Default Detail mode Viewing:
+
+
+
+
+First….
+
+Click on Track -> Iteration Status
+
+Shows Info for Current Spring
+
+
+CLOSING TASK
+Click Task -> Select Tasks ->Edit
+Mark To Do Hours
+
+
+SELECTING TASK
+Change state to In Progress then hit DONE
+
+
+Making new branch
+git checkout develop
+git pull
+startfeature US12345 (makes new branch)
+
+create new file _mycars.scss in widgets folder
+add file to _widgets.scss
+
+setup a watch on alfa - keeps looking for changes in file and will recompile assets when you save a file.
+
+Everytime you switch to new branch or git pull, rebuild your assets for localhost.
+
+when done, stop watch
+
+git status
+git add .
+git commit -m “US12345 finished toolbar styling”
+git push
+
+go into rally
+mark task as complete
+message in hip chat and ask jon or hung who wants to QA test
+
+switch to a different branch
+git checkout feature/US12345
+git status
+git pull
+buildalfa
+
+add in content
+move up molar image
+mover over page title to align with text
+
+alfa02 - populates test data
+US7927
+
+pullall  - pulls and updates cmd-web, sites, etc.
 
 <!-- Sass -->
 _base.scss - Main File
@@ -43,3 +123,9 @@ sudo ln -s /cvs/nexus/build/cc7-local-httpd.conf /etc/apache2/other/cc7-local-ht
 sudo defaults write /System/Library/LaunchDaemons/org.apache.httpd Disabled -bool false
 sudo launchctl load -w /System/Library/LaunchDaemons/org.apache.httpd.plist
 sudo /usr/sbin/httpd -k start -D WEBSHARING_ON
+
+<!-- Mobile Notes -->
+_variation-mobile.scss = 
+_base-mobile.scss = contains mobile widget imports
+widgets-mobile folder = contains actual widget specific css
+you can drag and drop code from browser into xcode simulator
